<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6AC00"
    tools:context=".friend">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/g" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="124dp"
        android:text="@string/app_name"
        android:textColor="#682191"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/player11"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/ic_delete"
        android:ems="10"
        android:hint="@string/Play_1"
        android:inputType="textEmailAddress"
        android:textColor="#50206C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/player2"
        android:layout_width="275dp"
        android:layout_height="40dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="320dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/ic_notification_overlay"
        android:drawablePadding="5sp"
        android:ems="10"
        android:hint="@string/Play_2"
        android:inputType="textEmailAddress"
        android:textColor="#50206C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/player11"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="244dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>